--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-jshint": "^0.11.1",
     "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-uglify": "^0.8.0",
+    "grunt-template-jasmine-istanbul": "^0.3.3",
     "requirejs": "^2.1.16"
   }
 }
