--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Javascript library for generating 3D menus like the ones in the early Tomb Raider games.",
   "main": "src/tombraidermenu.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,24 @@
     "grunt-contrib-qunit": "^4.0.0",
     "grunt-contrib-uglify": "^5.0.0",
     "grunt-template-jasmine-istanbul": "^0.4.0",
-    "requirejs": "^2.1.16"
+    "requirejs": "^2.1.16",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.1.3",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1"
+  },
+  "lint-staged": {
+    "*.(js|vue)": [
+      "npm run prettier -- --write",
+      "npm run lint"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
