--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Javascript library for generating 3D menus like the ones in the early Tomb Raider games.",
   "main": "src/tombraidermenu.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "esbuild src/tombraidermenu.js --bundle --outfile=dist/tombraider.js-v0.0.1.min.js",
     "prettier": "prettier"
   },
