--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,22 +11,22 @@ jobs:
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
-        name: Set up development Docker Buildx
-        id: development_builder
+        name: Set up testing Docker Buildx
+        id: testing_builder
         uses: docker/setup-buildx-action@v1
       -
         name: Build testing container
         uses: docker/build-push-action@v2
         with:
           push: false
-          builder: ${{ steps.development_builder.outputs.name }}
-          target: development
+          builder: ${{ steps.testing_builder.outputs.name }}
+          target: testing
           load: true
           tags: testing-container:latest
       - 
         name: Run tests
         uses: addnab/docker-run-action@v1
         with:
-          image: plants-client-testing:latest
+          image: testing-container:latest
           shell: sh 
           run: npm run test
