--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "build": "esbuild src/tombraidermenu.ts --bundle --outfile=dist/tombraider.js-v0.0.1.min.js",
-    "prettier": "prettier"
+    "prettier": "prettier",
+    "typecheck": "tsc --noEmit -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -16,16 +17,20 @@
     "3d",
     "menu",
     "tomb",
-    "raider",
-    "three.js"
+    "raider"
   ],
   "author": "namelivia <jignacio.amelivia@gmail.com>",
   "license": "GPL2",
   "bugs": {
     "url": "https://github.com/namelivia/tombraider.js/issues"
   },
-  "homepage": "https://github.com/namelivia/tombraidermenu.js",
+  "homepage": "https://github.com/namelivia/tombraider.js",
+  "dependencies": {
+    "three": "^0.126.1"
+  },
   "devDependencies": {
+    "@types/jest": "^26.0.22",
+    "@types/three": "^0.126.2",
     "esbuild": "^0.11.6",
     "esbuild-jest": "^0.5.0",
     "eslint": "^7.23.0",
@@ -34,12 +39,14 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   },
   "lint-staged": {
-    "*.(js)": [
+    "*.(js|ts)": [
       "npm run prettier -- --write",
-      "npm run lint"
+      "npm run lint",
+      "npm run typecheck"
     ]
   },
   "husky": {
