Run typecheck on CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           image: testing-container:latest
           shell: sh 
-          run: npm run test
+          run: npm run typecheck && npm run test
