--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,7 @@
 name: build
-on:
-  push:
-    branches:
-      - master
+on: push
 jobs:
-  main:
+  setup:
     runs-on: ubuntu-latest
     steps:
       -
@@ -14,7 +11,11 @@ jobs:
         name: Set up testing Docker Buildx
         id: testing_builder
         uses: docker/setup-buildx-action@v1
-      -
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - 
         name: Build testing container
         uses: docker/build-push-action@v2
         with:
@@ -30,3 +31,11 @@ jobs:
           image: testing-container:latest
           shell: sh 
           run: npm run typecheck && npm run test
+  deploy:
+    runs-on: ubuntu-latest
+    needs: setup
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - 
+        name: Deploy
+        run: echo "This is not ready yet"
