--- a/package.json
+++ b/package.json
@@ -44,14 +44,7 @@
   },
   "lint-staged": {
     "*.(js|ts)": [
-      "npm run prettier -- --write",
-      "npm run lint",
-      "npm run typecheck"
+      "npm run prettier -- --write"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   }
 }
