--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "url": "https://github.com/namelivia/tombraider.js/issues"
   },
   "homepage": "https://github.com/namelivia/tombraider.js",
+  "babel": {
+    "presets": [
+        "@babel/preset-typescript"
+    ]
+  },
   "dependencies": {
     "three": "^0.126.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
     "@types/three": "^0.126.2",
     "esbuild": "^0.11.6",
