--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,8 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: daily
-    time: "04:00"
+    interval: weekly
+    interval: saturday
   open-pull-requests-limit: 10
   ignore:
   - dependency-name: esbuild
